# VN1

./: .ai-enrich.toml  .codex  .gitignore  AutoETS.ipynb  CLAUDE.md  EnsembleSubmission.ipynb  LightGbmStarter.ipynb  Makefile  README.md  env.yaml  install.sh  main.py  pyproject.toml
.claude/: AGENTS.md
.claude/.prompts/: AGENTS.md  INDEX.md  README.md
.claude/wiki/: AGENTS.md  README.md  index.md  log.md
.gemini/: GEMINI.md  settings.json
.github/workflows/: ci.yml
.openrouter/: .env.example  config.toml
notebooks/: AutoETS.ipynb  EnsembleSubmission.ipynb  LightGbmStarter.ipynb
src/: __init__.py  data.py  style.py
src/vn1/: __init__.py  data.py  ensemble.py  metrics.py  models.py  style.py  submission.py  validation.py
tests/: conftest.py
tests/integration/: test_models.py  test_pipeline.py
tests/smoke/: test_imports.py  test_main.py
tests/unit/: test_data.py  test_ensemble.py  test_metrics.py  test_models.py  test_submission.py  test_validation.py
