[project]
name = "vn1-forecast-experiments"
version = "0.1.0"
description = "VN1 forecasting competition experiments (LightGBM, AutoETS, ...)."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "category_encoders",
    "coreforecast",
    "darts",
    "fastparquet",
    "feature-engine",
    "lightgbm<4.5",  # 4.5+ defines feature_names_in_ as a read-only property; clashes with sklearn validate_data
    "loguru",
    "matplotlib",
    "mlforecast",
    "numpy",
    "optuna",
    "pandas",
    "plotly",
    "polars",
    "scikit-learn",
    "seaborn",
    "statsforecast",
    "statsmodels",
    "tsfeatures",
    "utilsforecast",
    "window-ops",
]

[dependency-groups]
dev = [
    "black",
    "ipykernel>=6.29,<7",
    "isort",
    "jupyter",
]

[tool.uv]
package = false

[tool.black]
line-length = 120

[tool.isort]
skip_gitignore = true
atomic = true
multi_line_output = 3
indent = 4
lines_after_imports = 2
include_trailing_comma = true
