[project]
name = "vn1"
version = "0.1.0"
description = "VN1 forecasting competition experiments — Theta + AutoETS + LightGBM ensemble."
readme = "README.md"
requires-python = ">=3.10,<3.12"
authors = [{ name = "Rick Arko", email = "rick.arko17@gmail.com" }]
license = { text = "MIT" }
keywords = ["forecasting", "vn1", "nixtla", "lightgbm", "theta", "ensemble", "time-series"]

dependencies = [
    # --- Forecasting stack (Nixtla) ---------------------------------
    "statsforecast",
    "mlforecast",
    "utilsforecast",
    "coreforecast",
    "tsfeatures",
    "window-ops",
    # --- ML / numerics ----------------------------------------------
    # Pinned: lightgbm 4.5+ defines `feature_names_in_` as a read-only @property,
    # which clashes with sklearn's validate_data setter when fitting on a
    # polars DataFrame (the path mlforecast takes). Revisit when upstream ships a setter.
    "lightgbm<4.5",
    "scikit-learn",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    # --- Optimization / tooling -------------------------------------
    "optuna",
    "scipy",
    "loguru",
    # --- Plotting ---------------------------------------------------
    "matplotlib",
    "seaborn",
    "plotly",
    # --- Misc -------------------------------------------------------
    "category_encoders",
    "darts",
    "fastparquet",
    "feature-engine",
    "statsmodels",
]

[project.urls]
Repository = "https://github.com/RickArko/VN1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vn1"]

[tool.hatch.build.targets.sdist]
include = ["src/vn1", "README.md", "LICENSE"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pandas-stubs",
    "types-pyyaml",
]
notebook = [
    "jupyter>=1.1",
    # Pinned: ipykernel 7 is incompatible with jupyter_client / notebook 7.x
    # bundled in this lock — kernel hangs on browser launch. Revisit when
    # upstream releases align.
    "ipykernel>=6.29,<7",
    "jupyterlab>=4.0",
]

# ----------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PD", "RUF"]
# E501  — line length is enforced by formatter, not linter
# RUF002/3 — allow unicode `×` / `→` / `–` in docstrings + comments
# PD013 — `.melt()` ergonomics for Nixtla long-frames
# SIM108 — `if/else` reads better than ternaries when branches diverge
ignore = ["E501", "RUF002", "RUF003", "PD013", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "PD"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src/vn1"]

# Forecasting libs ship loose / partial type stubs. Trust the package's own
# typing and silence stub-induced friction at the boundary.
[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "mlforecast.*",
    "statsforecast.*",
    "utilsforecast.*",
    "coreforecast.*",
    "darts.*",
    "tsfeatures.*",
    "window_ops.*",
    "category_encoders.*",
    "feature_engine.*",
]
follow_imports = "silent"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "smoke: Fast sanity checks — imports, package metadata. Run on every save.",
    "unit: Pure-function tests for metrics, data shaping, ensemble math.",
    "integration: End-to-end on toy data — model fit/predict, CV, pipeline.",
    "slow: Wall-clock > ~5s; skip in tight loops with `-m 'not slow'`.",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/vn1"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
